...
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/waterLevelView"
        app:layout_constraintTop_toBottomOf="@+id/waterPercentage"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
...
